// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debe de mostrar el componente con la imagen 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug2.png"
  />
</div>
`;

exports[`debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
